added thank you

--- a/_posts/2021-08-12-calliope.md
+++ b/_posts/2021-08-12-calliope.md
@@ -69,3 +69,7 @@ The clerk smiled.
 Cali jumped off the stool and followed the clerk back to the entrance. Upon seeing her father, she ran up to him and hooked her hand to his. The pair left the store, and the whole journey home Cali made up stories and told them to her father.
 
 And they were quite magical stories at that.
+
+
+___
+> Thanks to Ross Hardin, Hannah Gooden, and Sean Valley for reading drafts of this.
