Trimming some words

--- a/_posts/2021-08-12-calliope.md
+++ b/_posts/2021-08-12-calliope.md
@@ -7,7 +7,7 @@ date: 2021-08-12 00:30:00 +0000
 categories: [fiction, shortstories]
 ---
 
-Cali wandered through the small store away from her father. Vintage hand me downs littered the space, discarded trash to anyone passing by who might fleetingly glance, but hidden treasures to those who knew what to look for. Cali’s father stayed behind admiring old lamps and chests and wardrobes, leaving her free to venture deeper into the back on her own. She crossed a doorway parted by curtains and entered a room lined with bookshelves reaching high into a void. Dim lights hung from a ceiling hidden by height and lingering dust. On the shelves, books written by the great characters of history hugged others from nobodies that no one had ever bothered to remember, and never would. 
+Cali wandered through the small store away from her father. Vintage hand me downs littered the space, discarded trash to anyone passing by who might fleetingly glance, but hidden treasures to those who knew what to look for. Cali’s father stayed behind admiring old lamps and chests and wardrobes, leaving her free to venture deeper into the back. She crossed a doorway parted by curtains and entered a room lined with bookshelves reaching high into a void. Dim lights hung from a ceiling hidden by height and lingering dust. On the shelves, books written by the great characters of history hugged others from nobodies that no one had ever bothered to remember, and never would. 
 
 Cali explored the labyrinthine shelves, scanning the titles. Some stared at her in English, while others greeted her in French, Spanish, Arabic, Hebrew, Sanskrit. A few wore tongues no other man or woman alive would recognize, save the old clerk that managed the bookstore. The same clerk who now appeared behind the girl, silently, like a shadow.
 
