--- a/_posts/2021-08-12-calliope.md
+++ b/_posts/2021-08-12-calliope.md
@@ -29,7 +29,7 @@ Cali pulled a stool up to the desk and clambered onto it. She examined the book 
 
 “What’s the name of this book… ?” Cali asked, looking up to address the clerk. But he had gone. She turned around, searching down the book shelf alleys for him, but only empty aisles greeted her.
 
-Shifting back in her seat, Cali turned to the book and began to read. 
+Shifting back in her seat, Cali turned to the text and began to read. 
 
 
 Fantastical stories greeted her. Of pirates with ships covered in moss that roamed swamps in a far away land, patrolling for unlucky merchants travelling between kingdoms.  Of thieves who cloaked themselves with shadows, masterfully bending light to hide themselves from their victims until a knife against their throat emptied their pockets. She read stories of machiavellian women who bent men to their will, and ruled fierce, expanding empires, paired with tales of a maiden who travelled through the centuries curing lepers, restoring burn victims, and remitting cancer patients. She read of great beasts that once roamed the earth hunting humans for sport. She read of the beginning of a universe much like ours, and how everything in it came to be. She met the characters of this universe and witnessed the great and terrible things they did. She embarked on adventures with heroes who left their homes to confront the unknown; Who fell and stumbled, only to rise again and learn from their failures. Heroes who bettered themselves and overcame evil, returning home having changed the world and the world having changed them. She read and read and read, for what felt to her like hours, stories she had never heard before and never would again. 
