--- a/_posts/2021-08-12-calliope.md
+++ b/_posts/2021-08-12-calliope.md
@@ -50,23 +50,23 @@ The clerk smiled. “Tell me child, which was your favorite of the stories?”
 
 “Oh it’s hard to pick, they were all so good!”
 
-“What was the last one you read? The one you just finished,”
+“What was the last one you read? The one you just finished.”
 
-“Oh that one was so good. It was about… well there was this… uh… it was… um…,”
+“Oh that one was so good. It was about… well there was this… uh… it was… um…”
 
 “...”
 
-“I don’t remember,”
+“I don’t remember.”
 
-“And you never will. But you will remember how they made you feel, and you will recognize that same magic in future stories you read. The stories here, they do not exist. But perhaps another story of similar quality will, one day. Perhaps you will write it,”
+“And you never will. But you will remember how they made you feel, and you will recognize that same magic in future stories you read. The stories here, they do not exist. But perhaps another story of similar quality will, one day. Perhaps you will write it.”
 
-“Yeah! I’ll write my stories down so that no one will forget them like I did just now,”
+“Yeah! I’ll write my stories down so that no one will forget them like I did just now.”
 
 The clerk smiled.
 
-“Come along now child, your father is waiting for you in the front,”
+“Come along now child, your father is waiting for you in the front.”
 
-Cali jumped off the stool and followed the clerk back to the entrance. Upon seeing her father, she ran up to him and hooked her hand to his. The pair left the store, and the whole journey home Cali made up stories and told them to her father.
+Cali jumped off the stool and followed the clerk back to the entrance where she'd left her father. Upon seeing him, she ran up  and hooked her hand to his. The pair left the store, and the whole journey home Cali made up stories and told them to her father.
 
 And they were quite magical stories at that.
 
