--- a/_posts/2021-12-06-games.md
+++ b/_posts/2021-12-06-games.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Should We Cheat In Games?"
-subtitle: "An Inquiry On Justice"
+subtitle: "Musings on Naruto, Plato, and Justice"
 author: Alejandro Londono
 date: 2021-12-01 00:30:00 +0000
 categories: [blogposts, reading]
@@ -10,7 +10,7 @@ categories: [blogposts, reading]
 > We shape our buildings; thereafter they shape us.
 -Winston Churchill
 
-I went down yesterday to my brothers soccer game. During the game, I watched a player push down another from the opposite team and take the ball away from him. This action should have incurred a penalty, had the referee been paying more attention. But he wasn't, and it didnt. So the ball changed possession and the game continued on.
+I went down yesterday to my brother's soccer game. During the game, I watched a player push down another from the opposite team and take the ball away from him. This action should have incurred a penalty, had the referee been paying more attention. But he wasn't, and it didn't. So the ball changed possession and the game continued on.
 
 Pushing an opposing player over is against the rules. But __is the purpose of a game to win by following the rules? Or is breaking the rules in order to win part of the game?__
 
@@ -18,19 +18,21 @@ Our answer to this question defines our games, how they're played, and the playe
 
 In the Japanese T.V. show, Naruto, the characters live in a warring world. In an early plot arc, the protagonists take a series of examinations to advance in their ranks. The first of these exams is a written test full of unreasonably difficult questions. Our participants are not expected to know the correct answers to these questions. The only way they can pass is to cheat off their neighbor, but if they are caught they will be disqualified. 
 
-It is later revealed, cheating was _expected_. The exams were meant to evaluate their ability to do so without being caught. Winning by breaking the rules was part of the game. In their world, breaking rules is a means to an end: winning wars. And throughout Naruto we see characters commit immoral acts to advance their agendas. Sometimes the intent is to do good, but the means to do so is wrong. 
+It is later revealed that cheating was _expected_. The exams were meant to evaluate their ability to do so without being caught. Winning by breaking the rules was part of the game. In their world, breaking rules is a means to an end: winning wars. And throughout Naruto we see characters commit immoral acts to advance their agendas. Sometimes the intent is to do good, but the means to do so is wrong. 
 
 Do the ends justify the means? 
 
 We have grappled with this question as far back as Plato, when he wrote his dialogue, The Republic. In it he takes an opposing stance. With regards to justice and injustice, he posits, justice is an end in itself, not just a means.
 
-The dialogue debates this topic early on through the characters of Glaucon and Socrates. Glaucon argues that it is better to _appear_ just, but in reality act unjustly. He claims that behaving unjustly can advance someone's personal goals, and no negative consequences will occur as long as they are not caught. Socrates, on the other hand, defends the side of justice. He states that it is always better to behave justly even when we reap no benefit from it, and spends the rest of the text describing the Just City to further his defense.
+The dialogue debates this topic early on through the characters of Glaucon and Socrates. Glaucon argues that it is better to _appear_ just, but in reality act unjustly. He claims that behaving unjustly can advance someone's personal goals, and no negative consequences will occur as long as they are not caught. Socrates, on the other hand, defends the side of justice. He states that it is always better to behave justly even when we reap no benefit from it and spends the rest of the text describing a Just City to further his defense.
 
 Socrates' city embodies his<sup id="fn_one">[[1](#footnoteone)]</sup> ideal qualities for a civilization: Wisdom, Courage, Discipline, and, of course, Justice. He argues that for the city to hold these qualities, its citizens must hold them as well. But for the citizens to be "just", the city itself must be so first. A circular, almost paradoxical, effect follows. By being "just", the city makes its residents "just", and in turn, the citizens do the same to the city.
 
 The stories in Naruto, in their own way, reach a similar conclusion. Citizens taught deceit and unfairness as virtues construct a society that reflects those values. The continuous warring state and cyclical violence in that world results from the behavior of its participants. And the participant's behavior is a reaction to an unjust world. 
 
-Churchill said that first we shape our buildings, then they shape us. Likewise, we craft how we play our games, and they then craft the kind of players that participate. If we decide that part of our game is to break the rules then our game will create and attract players that value rule breaking. In parallel, a society that idealizes injustice will create unjust citizens. To prevent this, we must shape our games, our societies, to be fair and to be just. In that way our players and our citizens will be _just_ as well. 
+Churchill said that first we shape our buildings, then they shape us. Likewise, we craft how we play our games, and they then craft the kind of players that participate. If we decide that part of our game is to break the rules then our game will create and attract players that value rule breaking. In parallel, a society that idealizes injustice will create unjust citizens. To prevent this, we must shape our games, our societies, to be fair and to be just. In that way our players and our citizens will be _just_ as well.
+
+### Notes
 
 [<a name="footnoteone" href="#fn_one">1</a>] Or, rather, Plato's.
 
