--- a/_posts/2021-12-06-games.md
+++ b/_posts/2021-12-06-games.md
@@ -16,7 +16,7 @@ Pushing an opposing player over is against the rules. But __is the purpose of a 
 
 Our answer to this question defines our games, how they're played, and the players themselves. How we shape our games foreshadows how we shape our society. Players should behave justly and fairly in games because we want the same in society.
 
-In the Japanese T.V. show, Naruto, the characters live in a warring world. In an early plot arc, the protagonists take a series of examinations to advance in their ranks. The first of these exams is a written test full of unreasonably difficult questions. Our participants are not expected to know the correct answers to these questions. The only way they can pass is to cheat off their neighbor, but if they are caught they will be disqualified. 
+In the Japanese T.V. show, Naruto, the characters live in a warring world. During an early plot arc, the protagonists take a series of examinations to advance in their ranks. The first of these exams is a written test full of unreasonably difficult questions. Our participants are not expected to know the correct answers to these questions. The only way they can pass is to cheat off their neighbor, but if they are caught they will be disqualified. 
 
 It is later revealed that cheating was _expected_. The exams were meant to evaluate their ability to do so without being caught. Winning by breaking the rules was part of the game. In their world, breaking rules is a means to an end: winning wars. And throughout Naruto we see characters commit immoral acts to advance their agendas. Sometimes the intent is to do good, but the means to do so is wrong. 
 
