New footnote and css

--- a/_posts/2021-12-06-games.md
+++ b/_posts/2021-12-06-games.md
@@ -30,10 +30,18 @@ Socrates' city embodies his<sup id="fn_one">[[1](#footnoteone)]</sup> ideal qual
 
 The stories in Naruto, in their own way, reach a similar conclusion. Citizens taught deceit and unfairness as virtues construct a society that reflects those values. The continuous warring state and cyclical violence in that world results from the behavior of its participants. And the participant's behavior is a reaction to an unjust world. 
 
-Churchill said that first we shape our buildings, then they shape us. Likewise, we craft how we play our games, and they then craft the kind of players that participate. If we decide that part of our game is to break the rules then our game will create and attract players that value rule breaking. In parallel, a society that idealizes injustice will create unjust citizens. To prevent this, we must shape our games, our societies, to be fair and to be just. In that way our players and our citizens will be _just_ as well.
+Churchill said that first we shape our buildings, then they shape us. Likewise, we craft how we play our games, and they then craft the kind of players that participate. If we decide that part of our game is to break the rules then our game will create and attract players that value rule breaking. In parallel, a society that idealizes injustice will create unjust citizens. To prevent this, we must shape our games, our societies, to be fair and to be just. In that way our players and our citizens will be _just_ as well<sup id="fn_two">[[2](#footnotetwo)]</sup>.
 
 ### Notes
 
 [<a name="footnoteone" href="#fn_one">1</a>] Or, rather, Plato's.
 
-> Thanks to Riya Gandhi, Nathan Schulz, Nathan Claus, Ross Hardin, and <span class="easter-egg"> Robert Dominguez</span> <span class="hide">(Praise be to He, The Dark Lord)</span> for reading drafts of this
+[<a name="footnotetwo" href="#fn_one">2</a>] A few examples of real world instances where unjust behavior/cheating is either tolerated, accepted, expected, or encouraged:
+
+1. Bribing of a United States Congressional Representative is illegal, but lobbying is fully legal, encouraged, and attains the same result
+
+2. The United States financial industry is heavily regulated to prevent insider trading. Anyone with advantageous knowledge not publically available is restricted from using that knowledge to improve their financial position. However, many still manage to do so without repercussion, most notably United States [Congressional](https://web.archive.org/web/20220101151634/https://www.businessinsider.com/congress-stock-act-violations-senate-house-trading-2021-9) [Representatives](https://web.archive.org/web/20211227185252/https://www.businessinsider.com/congress-staff-violated-stock-act-conflicts-of-interest-possible-2021-12) who have insider information on laws, regulations, and governmental hearings
+
+3. The loopholes and systems in place that allow the rich and ultra-rich to <span class="secret-text"> <span class="place-holder-text"> avoid </span> <span class="hidden-text"> _evade_ </span> </span> paying taxes
+
+> Thanks to Riya Gandhi, Nathan Schulz, Nathan Claus, Ross Hardin, and Hannah Gooden for reading drafts of this
