--- a/_posts/2021-12-06-games.md
+++ b/_posts/2021-12-06-games.md
@@ -36,7 +36,7 @@ Churchill said that first we shape our buildings, then they shape us. Likewise, 
 
 [<a name="footnoteone" href="#fn_one">1</a>] Or, rather, Plato's.
 
-[<a name="footnotetwo" href="#fn_one">2</a>] A few examples of real world instances where unjust behavior/cheating is either tolerated, accepted, expected, or encouraged:
+[<a name="footnotetwo" href="#fn_one">2</a>] A few examples of real world instances where unjust behavior/cheating is possibly tolerated, accepted, expected, or encouraged:
 
 1. Bribing of a United States Congressional Representative is illegal, but lobbying is fully legal, encouraged, and attains the same result
 
