--- a/_posts/2021-12-06-games.md
+++ b/_posts/2021-12-06-games.md
@@ -36,14 +36,12 @@ Churchill said that first we shape our buildings, then they shape us. Likewise, 
 
 [<a name="footnoteone" href="#fn_one">1</a>] Or, rather, Plato's.
 
-<div class="hide">
-[<a name="footnotetwo" href="#fn_one">2</a>] A few examples of real world instances where unjust behavior/cheating is possibly tolerated, accepted, expected, or encouraged at the expense of the common citizen:
+[<a name="footnotetwo" href="#fn_one">2</a>] Some areas of real world instances where possibly unjust behavior/cheating is tolerated, accepted, expected, or encouraged at a political level:
 
 1. Bribing of a United States Congressional Representative is illegal, but lobbying is fully legal, encouraged, and attains the same result
 
 2. The United States financial industry is heavily regulated to prevent insider trading. Anyone with advantageous knowledge not publically available is restricted from using that knowledge to improve their financial position. However, many still manage to do so without repercussion, most notably United States [Congressional](https://web.archive.org/web/20220101151634/https://www.businessinsider.com/congress-stock-act-violations-senate-house-trading-2021-9) [Representatives](https://web.archive.org/web/20211227185252/https://www.businessinsider.com/congress-staff-violated-stock-act-conflicts-of-interest-possible-2021-12) who have insider information on laws, regulations, and governmental hearings
 
 3. The loopholes and systems in place that allow the rich and ultra-rich to <span class="secret-text"> <span class="place-holder-text"> avoid </span> <span class="hidden-text"> _evade_ </span> </span> paying taxes
-</div>
 
 > Thanks to Riya Gandhi, Nathan Schulz, Nathan Claus, Ross Hardin, and Hannah Gooden for reading drafts of this
