--- a/_posts/2021-12-06-games.md
+++ b/_posts/2021-12-06-games.md
@@ -30,7 +30,7 @@ Socrates' city embodies his<sup id="fn_one">[[1](#footnoteone)]</sup> ideal qual
 
 The stories in Naruto, in their own way, reach a similar conclusion. Citizens taught deceit and unfairness as virtues construct a society that reflects those values. The continuous warring state and cyclical violence in that world results from the behavior of its participants. And the participant's behavior is a reaction to an unjust world. 
 
-Churchill said that first we shape our buildings, then they shape us. Likewise, we craft how we play our games, and they then craft the kind of players that participate. If we decide that part of our game is to break the rules then our game will create and attract players that value rule breaking. In parallel, a society that idealizes injustice will create unjust citizens. To prevent this, we must shape our games, our societies, to be fair and to be just. In that way our players and our citizens will be _just_ as well<sup class="hide" id="fn_two">[[2](#footnotetwo)]</sup>.
+Churchill said that first we shape our buildings, then they shape us. Likewise, we craft how we play our games, and they then craft the kind of players that participate. If we decide that part of our game is to break the rules then our game will create and attract players that value rule breaking. In parallel, a society that idealizes injustice will create unjust citizens. To prevent this, we must shape our games, our societies, to be fair and to be just. In that way our players and our citizens will be _just_ as well<sup id="fn_two">[[2](#footnotetwo)]</sup>.
 
 ### Notes
 
