--- a/2022-04-25-numinous.md
+++ b/2022-04-25-numinous.md
@@ -11,8 +11,10 @@ categories: [reading, blogposts]
 >
 > &nbsp;&nbsp;&nbsp;&nbsp;Indicating or suggesting the presence of divinity.
 
-When I was 19 I hiked for three days through a portion of the Andes with my brother and my father. We ascended from the base of a valley into a forest that marked the edge of mountains. We ducked branches and waded rivers until, over time, the elevation shrunk trees into shrubbery and delivered us into clouds. Through much of our journey, a thick fog surrounded our group preventing us from seeing any further than a few meters in front of us. Eventually, however, after arduous hours on our feet, the clouds lifted onto the edge of a valley. The mountains cleared, palming a house isolated from the world, and blanketed by grass and small bushes. From our vantage, the house looked built for dolls. I reached out and picked it up, tossing it in the air with one hand, then catching it in the other. Over and over. Until I tossed it one too many times, and it flew too high, and on the way down it slipped through my fingers, tumbling back into the void of the valley. In a scramble to catch it, I followed it over the edge. Around the void the mountains loomed, shrinking the house below. Shrinking me in my free fall. Towering. Growing taller with each passing second. Each one a finger in the hand of the valley. Each one a face watching over its dominion, daring me to venture deeper. Giants as old as time carved by forces greater than man held me in their gaze without seeing me at all. I shrunk as I fell. I transformed into an ant, crawling over these tectonic colossi that could swat me away any moment they wanted, if ever they even noticed me. And through this metamorphosis I stepped into the valley with awe.
+When I was 19 I hiked for three days through a portion of the Andes with my brother and my father. We ascended from the base of a valley into a forest that marked the edge of mountains. We ducked branches and waded rivers until, over time, the elevation shrunk trees into shrubbery and delivered us into clouds. Through much of our journey, a thick fog surrounded our group preventing us from seeing any further than a few meters in front. Eventually, however, after arduous hours on our feet, the clouds lifted onto the edge of a valley. The mountains cleared, palming a house isolated from the world, and blanketed by grass and small bushes. From our vantage, the house looked built for dolls. I reached out and picked it up, tossing it in the air with one hand, then catching it in the other. Over and over. Until I tossed it one too many times, and it flew too high, and on the way down it slipped through my fingers, tumbling back into the void of the valley. In a scramble to catch it, I followed it over the edge. Around the void the mountains loomed, shrinking the house below. Shrinking me in my free fall. Towering. Growing taller with each passing second. Each mountain a finger in the hand of the valley. Each one a face watching over its dominion, daring me to venture deeper. Giants as old as time carved by forces greater than man held me in their gaze without seeing me at all. I shrunk as I fell. I transformed into an ant, crawling over these tectonic colossi that could swat me away any moment they chose, if ever they even noticed me. I crashed back where I had been standing, and with metamorphosis I stepped into the valley in awe.
 
-Aldous Huxley when meditating on the moon called it numinous. 
+Aldous Huxley when meditating on the moon called it numinous. Citing Socrates, he claimed it consisted of "God-Stuff". When I stood isolated deep in the mountains, I too felt the numinous call to me.
+It is a deep, reverent feeling that comes with the presence of something greater than ourselves. Certainly, the mountains are numinous, much like the moon. The numinous calls us to recognize divinity and search for where it may lay hidden. 
 
+The numinous surrounds us. It is the most human of all sentiments to recognize divinity and search for where it may lay hidden. There is the question of whether numens are so of their own accord. Were they embeded by the gods with divinity? If it were not for man, would they remain numinous? One might posit that man bequeths divinity onto the world. Man was made in the image of God, or perhaps god in the image of man, deriving his divinity from the consent of mortals. Huxley points out that it is not only man who worships the moon. Dogs and Wolves howl at night in a similar reverence of the numinous. We might venture to claim that divinity is not unique to man, but to all creatures who possess consciousness. Perhaps divinity is derived from the consent of the conscious. Maybe conciousness is divinity. A numinous quality emerges in the bonds that we create among each other as well. Whatever it is that seems to drive us to care and love for each other, to collaborate and improve our world for the benefit of all and without expected return, contains some quality of divinity. The projects we create and the ideas that we conjure bind us to one another in such a way that supersedes an individual capacity. Creation is numinous. What is man but a creator searching for the divine?
 
