--- a/_posts/2022-07-30-free-will.md
+++ b/_posts/2022-07-30-free-will.md
@@ -7,7 +7,7 @@ date: 2022-07-30 00:30:00 +0000
 categories: [blogposts, reading]
 ---
 
-Many a person in history has written extensively on the nature of free will. Much of this writing puts particular focus on its existence. Entire religions revolve around these ideas. Though plenty have tried to prove whether or not free will exists, I'm not sure that anyone is capable of it. However, it seems to me, that,regardless of it's existence, we have no other choice but to behave as if its does.
+Many a person in history has written extensively on the nature of free will. Much of this writing puts particular focus on its existence. Entire religions revolve around these ideas. Though plenty have tried to prove whether or not free will exists, I'm not sure that anyone is capable of it. However, it seems to me, that regardless of it's existence, we have no other choice but to behave as if its does.
 
 Proof for the existence of free will is fundamentally a physics problem. If the universe is deterministic then free will does not exist. The laws of physics, when given an input corresponding to the initial conditions of the universe, would therein compute every event that has ever and will ever transpire. This function will output every event exactly as it has happened and exactly as it will happen, every time. This includes every action and every decision made by every human being ever. The most straightforward way to disprove free will is to prove that the universe is deterministic. 
 
