--- a/_posts/2021-08-12-calliope.md
+++ b/_posts/2021-08-12-calliope.md
@@ -11,7 +11,7 @@ Cali wandered through the small store away from her father. Vintage hand me down
 
 Cali explored the labyrinthine shelves, scanning the titles. Some stared at her in English, while others greeted her in French, Spanish, Arabic, Hebrew, Sanskrit. A few wore tongues no other man or woman alive would recognize, save the old clerk that managed the bookstore. The same clerk who now appeared behind the girl, silently, like a shadow.
 
-"Can I help you, child?” he asked, “Is there any book in particular you search for?", a timbre in his voice pierced the air only to break on paper dense shelves.
+"Can I help you, child?” he asked, “Is there any book in particular you search for?" a timbre in his voice pierced the air only to break on paper dense shelves.
 
 "N-no sir. I'm just looking sir. My father is up front and I came to look at the books. I like stories… Do you have any books with a good story?"
 
@@ -21,7 +21,7 @@ The clerk turned swiftly on his heels and floated down the aisle with a smooth g
 
 When Cali caught up to the clerk, he stood at the very back of the store behind a wooden desk flooded with disorganized heaps of books and paper sheets. Seeing her approach, he pulled out an ancient, yet sturdy, leather bound book. This book had clearly passed through hundreds, if not thousands, of hands, but had been made with such skill and handled with such care that the original binding still held like on its first day of print.
 
-The old man lugged the book up from under his desk and dropped it on the wood with a thud. Dust blew into the air clouding the pair’s vision. The clerk placed his hand on the cover and spoke,
+The old man lugged the book up from under his desk and dropped it on the wood with a thud. Dust blew into the air clouding the pair’s vision. The clerk placed his hand on the cover and spoke.
 
 “Here child. The stories in this text are many. Feel free to stay and read as long as you like. I have some work to attend to in the front, but will return to bring you back to your father once he beckons for you.”
 
@@ -30,7 +30,6 @@ Cali pulled a stool up to the desk and clambered onto it. She examined the book 
 “What’s the name of this book… ?” Cali asked, looking up to address the clerk. But he had gone. She turned around, searching down the book shelf alleys for him, but only empty aisles greeted her.
 
 Shifting back in her seat, Cali turned to the text and began to read. 
-
 
 Fantastical stories greeted her. Of pirates with ships covered in moss that roamed swamps in a far away land, patrolling for unlucky merchants travelling between kingdoms.  Of thieves who cloaked themselves with shadows, masterfully bending light to hide themselves from their victims until a knife against their throat emptied their pockets. She read stories of machiavellian women who bent men to their will, and ruled fierce, expanding empires, paired with tales of a maiden who travelled through the centuries curing lepers, restoring burn victims, and remitting cancer patients. She read of great beasts that once roamed the earth hunting humans for sport. She read of the beginning of a universe much like ours, and how everything in it came to be. She met the characters of this universe and witnessed the great and terrible things they did. She embarked on adventures with heroes who left their homes to confront the unknown; Who fell and stumbled, only to rise again and learn from their failures. Heroes who bettered themselves and overcame evil, returning home having changed the world and the world having changed them. She read and read and read, for what felt to her like hours, stories she had never heard before and never would again. 
 
